implementar fluxo repository